@@ -93,7 +93,7 @@ public class TotalesCodigoService {
             codigos = codigos.stream()
                     .filter(Objects::nonNull) // Asegurarse de no tener valores nulos
                     .sorted(Comparator.comparing(CodigoDto::getCodigoId)) // Ordenar por codigoId
-                    .toList();
+                    .collect(Collectors.toList());
 
             Map<Integer, TotalNovedadDto> totalesNovedad = totalNovedadList.stream()
                     .filter(Objects::nonNull)
@@ -111,9 +111,9 @@ public class TotalesCodigoService {
                 var totalItem = BigDecimal.ZERO;
                 if (totalesNovedad.containsKey(codigo.getCodigoId())) {
                     totalNovedad = totalesNovedad.get(codigo.getCodigoId()).getTotal();
-                    }
+                }
                 // Verificar si el totalNovedad es nulo o cero antes de procesarlo
-                if (totalNovedad.compareTo(BigDecimal.ZERO) == 0) {
+                if (totalNovedad == null || totalNovedad.compareTo(BigDecimal.ZERO) == 0) {
                     continue;
                 }
                 if (totalesItem.containsKey(codigo.getCodigoId())) {
@@ -296,7 +296,4 @@ public class TotalesCodigoService {
             }
         }
     }
-
-
-
 }
